# Convex-Clustering

./: .gitignore  README.md  environment.yml  estructura.txt  pyproject.toml  requirements.txt  shadow_test.py
.github/workflows/: ci.yml
src/convex_clustering/: __init__.py  algorithms.py  algoritihms.py  regression.py  utils.py  viz.py
tests/: conftest.py  test_algos.py  test_regression.py
