# =============================================================================
# pyproject.toml — convex_clustering
# PEP 517/518/621 — build backend: hatchling
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -----------------------------------------------------------------------------
# [project] — metadata del paquete 
# -----------------------------------------------------------------------------
[project]
name = "Convex_Clustering"
version = "0.1.0"
description = "Convex interpretable methods, ideal for interpretable outputs"
readme = "README.md"
license = "MIT" 
authors =[
    { name = "Juan Nicolas Mendoza Roncancio ", email = "juannicolasmendoza4@gmail.com" }
]
keywords = ["machine learning", "clustering", "convex optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

requires-python = ">=3.10" 
dependencies = [
    "numpy>=2.1.3",
    "scipy>=1.15.3",
    "scikit-learn>=1.6.1",
]


# -----------------------------------------------------------------------------
# [project.optional-dependencies] — grupos opcionales
# -----------------------------------------------------------------------------
[project.optional-dependencies]
 
viz = [
    "matplotlib>=3.10",
    "IPython >= 8.30"
]

dev = [
    "convex-clustering[viz]",  
    "pytest>=7.4",
    "pytest-cov>=4.1",          
    "ruff>=0.4",                
    "mypy>=1.8",                
    "ipykernel>=6.29.5",           
    "ipython>=8.0",
]

api = [
    "fastapi>=0.11.0",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27"
]

dashboard = [
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "networkx>=3.3",
]

all = [
    "convex-clustering[viz,api,dashboard]",
]

# -----------------------------------------------------------------------------
# [tool.hatch.build] — le dice a hatchling dónde está el código
# -----------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/convex_clustering"]

# -----------------------------------------------------------------------------
# [tool.pytest.ini_options] — configuración de pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# addopts: opciones por defecto en cada ejecución.
#   -v: verbose (muestra cada test por nombre)
#   --tb=short: traceback corto
#   --strict-markers: falla si hay markers no declarados
addopts = "-v --tb=short --strict-markers"
# markers declarados.
markers = [
    "slow: tests de larga duración (excluir con -m 'not slow')",
]


# -----------------------------------------------------------------------------
# [tool.ruff] — linter y formatter
# -----------------------------------------------------------------------------
[tool.ruff]
# ruff reemplaza: flake8, isort, pyupgrade, pydocstyle — todo en uno, escrito en Rust.
target-version = "py313"   # debe coincidir con requires-python
line-length = 88            # mismo default que black

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors (PEP 8)
    "W",    # pycodestyle warnings
    "F",    # pyflakes (imports no usados, variables no definidas)
    "I",    # isort (orden de imports)
    "UP",   # pyupgrade (sintaxis moderna: f-strings, typing, etc.)
    "B",    # flake8-bugbear (errores comunes sutiles)
    "N",    # pep8-naming (snake_case, PascalCase)
]

ignore = [
    "E501",   # ya lo tenías — line too long
    "N803",   # nombres de argumento en mayúscula (X, W) — convención matemática/sklearn
    "N806",   # nombres de variable en mayúscula (misma razón)
    "W293",
    "E741",
    "W291"
]
 
[tool.ruff.lint.per-file-ignores]
# En los tests, las aserciones con == son intencionales (pytest pattern).
# N802: nombres de funciones en tests pueden ser descriptivos y largos.
"tests/*" = ["S101", "N802"]


# -----------------------------------------------------------------------------
# [tool.mypy] — type checker
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
# strict = true activa: disallow_untyped_defs, disallow_any_generics,
# warn_return_any, warn_unused_ignores, etc.
# Activarlo desde el inicio es más fácil que añadirlo después.
strict = true
# numpy y sklearn tienen stubs, mypy los encuentra automáticamente.
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# [tool.coverage] — configuración de cobertura
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/convex_clustering"]
omit = ["tests/*", "notebooks/*", "app/*"]
 
[tool.coverage.report]
# Falla si la cobertura cae por debajo del 80%.
fail_under = 80
show_missing = true

